# CPPNN

./: README.md
exercises/01_neurons/01_single_neuron/: CMakeLists.txt  single_neuron.cpp
exercises/01_neurons/02_neuron_layer/: CMakeLists.txt  neuron_layer.cpp  utils_stdout.cpp
exercises/01_neurons/03_dot_product/: CMakeLists.txt  dot_product.cpp  dot_product.h  test_dot_product.cpp
exercises/01_neurons/04_matrix_product/: CMakeLists.txt  matrix_product.cpp  test_matrix_product.cpp
exercises/01_neurons/05_hidden_layers/: CMakeLists.txt  hidden_layers.cpp
exercises/02_layers/01_hidden_layers/: CMakeLists.txt  matrix_product.cpp  matrix_product.h  utils_stdout.h
exercises/02_layers/02_dense_layer/: CMakeLists.txt  dense.cpp  dense.h
exercises/02_layers/02_dense_layer/ops/: add.cpp  add.h  dot.cpp  dot.h  transpose.cpp  transpose.h
exercises/03_activations/01_relu/: CMakeLists.txt  relu.cpp  relu.h  test_relu.cpp
exercises/03_activations/02_softmax/: CMakeLists.txt  softmax.cpp  softmax.h  test_softmax.cpp
exercises/03_activations/02_softmax/utils/: utils_stdout.cpp  utils_stdout.h
exercises/03_activations/03_sigmoid/: CMakeLists.txt  test_sigmoid.cpp
exercises/03_activations/04_linear/: CMakeLists.txt  test_linear.cpp
exercises/04_loss/01_cce/: CMakeLists.txt  cce.cpp  cce.h  test_cce.cpp
main/src/math/ops/: add.cpp  add.h  dot.cpp  dot.h  transpose.cpp  transpose.h
main/src/nn/activations/: linear.cpp  linear.h  relu.cpp  sigmoid.cpp  sigmoid.h
main/src/nn/layers/: dense.cpp  dense.h
utils/: CMakeLists.txt  test_utils.cpp  utils_stdout.cpp  utils_stdout.h
